--- a/menus/templates/menus/new_menu_item.html
+++ b/menus/templates/menus/new_menu_item.html
@@ -3,23 +3,28 @@
 {% block content %}
 <h1>Inclui Item do Menu </h1>
 <form action="" method="post">
+    <h1>Remove Item {{ menu_item.id }} do Menu </h1>
     {% csrf_token %}
-    <fieldset>
-        <label for="category">Category:</label>
-        <input type="text" name="category"></input>
-
-        <label for="name">Name:</label>
-        <input type="text" name="name"></input>
-
-        <label for="description">Description:</label>
-        <input type="text" name="description"></input>
-
-        <label for="price">Price:</label>
-        <input type="text" name="price"></input>
-
-        <input type="submit" value="Confirmar" /> | <a href="/">Cancelar</a>
-
-    </fieldset>
+    <div class="form-group mb-3">
+        <label for="category" class="form-label">Category:</label>
+        <input type="text" name="category" class="form-control"/>
+    </div>
+    <div class="form-group mb-3">
+        <label for="name" class="form-label">Name:</label>
+        <input type="text" name="name" class="form-control" />
+    </div>
+    <div class="form-group mb-3">
+        <label for="description" class="form-label">Description:</label>
+        <input type="text" name="description" class="form-control"/>
+    </div>
+    <div class="form-group mb-3">
+        <label for="price" class="form-label">Price:</label>
+        <input type="text" name="price" class="form-control" />
+    </div>
+    <div class="form-group mb-3">
+        <button type="submit" class="btn btn-primary">Confirmar</button> 
+        <a href="/" class="btn btn-secondary">Cancelar</a>
+    </div>
 </form>
 
 {% endblock content %}
