--- a/menus/templates/menus/show_menu_itens.html
+++ b/menus/templates/menus/show_menu_itens.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Itens do Menu</h1>
-    <a href="{{ restaurant_id }}/new/">Incluir</a>
+    <a href="{{ restaurant_id }}/new/" class="btn btn-primary">Incluir</a>
     {% if menu_itens %}
         {% for menu_item in menu_itens %}
             <p>{{ menu_item.restaurant.name }}</p>
@@ -10,11 +10,11 @@
             <p>{{ menu_item.name }}</p> 
             <p>{{ menu_item.description }}  {{ menu_item.price }}</p>
             <p>
-            <a href='{{ menu_item.restaurant_id }}/edit/{{ menu_item.id }}'>Edit |</a>
-            <a href='{{ menu_item.restaurant_id }}/delete/{{ menu_item.id }}'>Delete</a>
+            <a href='{{ menu_item.restaurant_id }}/edit/{{ menu_item.id }}' class="btn btn-warning">Edit</a>
+            <a href='{{ menu_item.restaurant_id }}/delete/{{ menu_item.id }}'  class="btn btn-danger">Delete</a>
             </p>
         {% endfor %}
     {% else %}
-        <p>Nenhum item no menu, por favor inclua um.</p>
+        <p class="alert alert-warning">Nenhum item no menu, por favor inclua um.</p>
     {% endif %}
 {% endblock content %}
