--- a/menus/templates/restaurants/delete_restaurant.html
+++ b/menus/templates/restaurants/delete_restaurant.html
@@ -4,11 +4,14 @@
 <h1>Restaurante | <small>remoção</small></h1>
 <form action="" method="post">
     {% csrf_token %}
-    <fieldset>
-        <label for="name">Name:</label>
-        <input type="text" name="name" value="{{ restaurant.name }}"></input>
-        <input type="submit" value="Confirmar" /> | 
-        <a href="/">Cancelar</a>
-    </fieldset>
+    <div class="form-group mb-3">
+        <label for="name" class="form-label">Name:</label>
+        <input type="text" name="name" value="{{ restaurant.name }}" class="form-control" disabled/>
+    </div>
+
+    <div class="form-group mb-3">
+        <button type="submit" class="btn btn-primary">Confirmar</button> 
+        <a href="/" class="btn btn-secondary">Cancelar</a>
+    </div>
 </form>
 {% endblock content %}
