--- a/menus/templates/restaurants/new_restaurant.html
+++ b/menus/templates/restaurants/new_restaurant.html
@@ -4,12 +4,16 @@
 <h1>Restaurante | <small>inclusão</small></h1>
 <form action="" method="post">
     {% csrf_token %}
-    <fieldset>
-        <label for="name">Name:</label>
-        <input type="text" name="name"></input>
-        <input type="submit" value="Confirmar" /> | 
-        <a href="/">Cancelar</a>
-    </fieldset>
+    
+    <div class="form-group mb-3">
+        <label for="name" class="form-label">Name:</label>
+        <input type="text" name="name" class="form-control" />
+    </div>
+
+    <div class="form-group mb-3">
+        <button type="submit" class="btn btn-primary">Confirmar</button> 
+        <a href="/" class="btn btn-secondary">Cancelar</a>
+    </div>
 </form>
 
 {% endblock content %}
