--- a/menus/templates/restaurants/show_restaurants.html
+++ b/menus/templates/restaurants/show_restaurants.html
@@ -1,18 +1,18 @@
 {% extends "application.html" %}
 
 {% block content %}
-    <h1>Restaurantes no MenuHub</h1>
-    <a href="new/">Incluir</a>
-    {% if restaurants %}
-        {% for restaurant in restaurants %}
-            <p>{{ restaurant.name }}</p>
-            <p>
-            <a href='{{ restaurant.restaurant_id }}/menus/{{ restaurant.id }}'>Menu |</a>
-            <a href='{{ restaurant.restaurant_id }}/edit/{{ restaurant.id }}'>Edit |</a>
-            <a href='{{ restaurant.restaurant_id }}/delete/{{ restaurant.id }}'>Delete</a>
-            </p>
-        {% endfor %}
-    {% else %}
-        <p>Nenhum restaurante no MenuHub, por favor inclua um.</p>
-    {% endif %}
+<h1>Restaurantes no MenuHub</h1>
+<a href="new/" class="btn btn-primary">Incluir</a>
+{% if restaurants %}
+{% for restaurant in restaurants %}
+<p>{{ restaurant.name }}</p>
+<p>
+    <a href='{{ restaurant.restaurant_id }}/menus/{{ restaurant.id }}' class="btn btn-info">Menu</a>
+    <a href='{{ restaurant.restaurant_id }}/edit/{{ restaurant.id }}' class="btn btn-warning">Edit</a>
+    <a href='{{ restaurant.restaurant_id }}/delete/{{ restaurant.id }}' class="btn btn-danger">Delete</a>
+</p>
+{% endfor %}
+{% else %}
+<p class="alert alert-warning">Nenhum restaurante no MenuHub, por favor inclua um.</p>
+{% endif %}
 {% endblock content %}
